--- a/index.html
+++ b/index.html
@@ -6,31 +6,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <title>Document</title>
 </head>
 <body>
     <header class="navbar navbar-expand-lg bg-danger border-bottom">
         <div class="container">
-          <a class="navbar-brand" href="#"><img src="./imagenes/banderaperu.jpg" alt=""></a>
+          <a class="navbar-brand" href="#"><img src="./imagenes/banderaperu.jpg" class="logo" alt=""></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <nav class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active text-light" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Contacto</a>
+                <a class="nav-link active text-light" aria-current="page" href="./pages/contacto.html">Contacto</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Platos de la selva</a>
+                <a class="nav-link active text-light" aria-current="page" href="./pages/platosselva.html">Platos de la selva</a>
               </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link active" aria-current="page" href="#">Platos de la sierra</a>
+              <li class="nav-item">
+                <a class="nav-link active text-light" aria-current="page" href="./pages/platossierra.html">Platos de la sierra</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Postres</a>
+                    <a class="nav-link active text-light" aria-current="page" href="./pages/postres.html">Postres</a>
                   </li>
               </li>
             </ul>
@@ -74,23 +75,42 @@
 
 
         </section>
+   </main>
+
+   <footer class="container-fluid bg-danger text-white">
+
+    <div class="container">
+      <div class="row">
+        <div class="d-flex flex-column align-items-center">
+          <img src="./imagenes/banderaperu.jpg"alt="" class="w-10">
+          <p>Derechos reservados</p>
+          <span>Comidaperuana@gmail.com</span>
+          </div>
+            <div>
+              <h3>Redes sociales</h3>
+            <div class="d-flex justify-content-around">  
+            <i class="bi bi-instagram"></i>
+            <i class="bi bi-twitter"></i>
+            <i class="bi bi-facebook"></i>
+            </div>
+          </div>
+          <div>
+            <h3>Objetivos</h3>
+            <p>Lorem ipsum dolor sit amet.</p>
+          </div>
+  
+      </div>
+
+    </div>
+
+   </footer>
+
+     
 
 
 
 
 
-
-
-
-
-
-      </main>
-
-
-
-
-
-
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
 </body>
 </html>
